MFG Ready Version/force-app/main/default/objects/mfg_Case_Line_Item__c/mfg_Case_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Case Line Item</label>
    <nameField>
        <displayFormat>CLI-{0000000000}</displayFormat>
        <label>Case Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>