MFG Ready Version/force-app/main/default/objects/mfg_Case_Line_Item__c/fields/mfg_Asset__c.field-meta.xml
<CustomField>
    <fullName>mfg_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>Case_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>