MFG Ready Version/force-app/main/default/objects/mfg_Case_Line_Item__c/fields/mfg_Case__c.field-meta.xml
<CustomField>
    <fullName>mfg_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>Case_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>