MFG Ready Version/force-app/main/default/objects/mfg_Case_Line_Item__c/fields/mfg_ConvertedClaimLineItemId__c.field-meta.xml
<CustomField>
    <fullName>mfg_ConvertedClaimLineItemId__c</fullName>
    <label>ConvertedClaimLineItemId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>