MFG Ready Version/force-app/main/default/objects/mfg_Case_Line_Item__c/fields/mfg_Description__c.field-meta.xml
<CustomField>
    <fullName>mfg_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>