MFG Ready Version/force-app/main/default/objects/mfg_Case_Line_Item__c/fields/mfg_Quantity__c.field-meta.xml
<CustomField>
    <fullName>mfg_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>